--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-email/tailwind": "^0.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.15",
     "lucide-react": "^0.359.0",
     "moment": "^2.30.1",
@@ -38,7 +39,6 @@
     "react-intersection-observer": "^9.8.1",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
-    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
